<resources>
    <string name="app_name">Applications</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calculator">Calculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculator_btn_modular">%</string>
    <string name="calculator_btn_plus">+</string>
    <string name="calculator_btn_posneg">+/-</string>
    <string name="calculator_btn_minus">-</string>
    <string name="calculator_btn_dot">.</string>
    <string name="calculator_btn_divide">/</string>
    <string name="calculator_btn_zero">0</string>
    <string name="calculator_btn_one">1</string>
    <string name="calculator_btn_delete">DEL</string>
    <string name="calculator_btn_multiply">x</string>
    <string name="calculator_btn_equal">=</string>
    <string name="calculator_btn_two">2</string>
    <string name="calculator_btn_three">3</string>
    <string name="calculator_btn_four">4</string>
    <string name="calculator_btn_five">5</string>
    <string name="calculator_btn_six">6</string>
    <string name="calculator_btn_seven">7</string>
    <string name="calculator_btn_eight">8</string>
    <string name="calculator_btn_nine">9</string>
    <string name="calculator_btn_clear">C</string>
</resources>
